@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}},
 
 {{$NEXT}}
+  - Add memory option for reading archive directly from memory (gh#3)
 
 0.02      2021-06-01 12:40:19 -0600
   - Add as_hash method.  New feature requires Perl 5.22 (gh#2)
